[project]
name = "contact-exporter"
version = "0.1.0"
description = "Extract iMessage & WhatsApp contacts locally for Powerset"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["contacts", "imessage", "whatsapp", "cli"]
authors = [
    {name = "Powerset", email = "hello@powerset.dev"},
]
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
    "qrcode>=7.0",
]

[project.urls]
Homepage = "https://powerset.dev"
Repository = "https://github.com/powerset-co/contact-exporter"
Issues = "https://github.com/powerset-co/contact-exporter/issues"

[project.scripts]
contact-exporter = "contact_exporter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contact_exporter"]
